# spasynth

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  arsenal-claude-code-brief.md
.github/workflows/: build.yml
assets/branding/: make_app_icon.sh
docs/: CHANGELOG.md  everything-bundle-email.md  launch-email.md  marketing-brief.md  next-release-plan.md  shopify-listings.md  shopify-setup-guide.md  social-posts.md
installers/macos/: build_installer.sh
installers/windows/: SPASynth.iss
packaging/: license-template.txt
packaging/docs/: EULA.txt  QUICKSTART.txt  README.txt
reference-images/: pigments.avif
scripts/: build_library.sh  build_release.sh  package_library.sh
source/: ArsenalProcessor.cpp  ArsenalProcessor.h  MidiLearn.cpp  MidiLearn.h  SPASynthProcessor.cpp  SPASynthProcessor.h
source/dsp/: Arpeggiator.cpp  Arpeggiator.h  ArsenalVoice.cpp  ArsenalVoice.h  ChaosGenerator.h  ExtraOscillators.h  FDNReverb.h  FXChain.cpp  FXChain.h  GranularPlayer.h  LFO.h  Limiter.h  MidiClockSync.h  ModEffect.h  MultiModeFilter.h  ParametricEQ.h  SPASynthVoice.cpp  SPASynthVoice.h  SampleData.h  SampleLoader.cpp  SamplePlayer.h  Telemetry.h  TremVib.h  Wavetable.cpp  Wavetable.h  WavetableLoader.cpp  WavetableLoader.h  WavetableOscillator.h
source/params/: ParameterRegistry.cpp  ParameterRegistry.h  Randomizer.cpp  Randomizer.h
source/ui/: ArsenalEditor.cpp  ArsenalEditor.h  ArsenalLookAndFeel.cpp  ArsenalLookAndFeel.h  Controls.h  Displays.cpp  Displays.h  DraggableTabs.h  EqEditor.h  LimiterDisplay.h  MatrixPanel.h  ModulePanels.cpp  ModulePanels.h  PresetBrowser.cpp  PresetBrowser.h  SPASynthEditor.cpp  SPASynthEditor.h  SPASynthLookAndFeel.cpp  SPASynthLookAndFeel.h  SectionPanel.cpp  SectionPanel.h  Theme.h
tests/: ArsenalTests.cpp  RenderSmokeTest.cpp  SPASynthTests.cpp
